--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
+    "@types/better-sqlite3": "^5.4.1",
+    "better-sqlite3": "^7.1.2",
     "tslib": "^1.14.1"
   }
 }
