--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@oclif/command": "^1.8.0",
     "@oclif/config": "^1.17.0",
     "@oclif/plugin-help": "^3.2.2",
-    "better-sqlite3": "^7.1.2"
+    "better-sqlite3": "^7.1.2",
+    "chalk": "^2.4.2"
   }
 }
