--- a/package.json
+++ b/package.json
@@ -41,6 +41,15 @@
   ],
   "license": "MIT",
   "main": "lib/index.js",
+  "mocha": {
+    "extension": "ts",
+    "recursive": true,
+    "reporter": "spec",
+    "require": [
+      "ts-node/register"
+    ],
+    "timeout": "2000"
+  },
   "oclif": {
     "commands": "./lib/commands",
     "bin": "trudge",
@@ -53,7 +62,7 @@
     "postpack": "rm -f oclif.manifest.json",
     "posttest": "eslint . --ext .ts --config .eslintrc.js --fix",
     "prepack": "rm -rf lib && tsc -b && oclif-dev manifest && oclif-dev readme",
-    "test": "mocha -r ts-node/register \"test/**/*.test.ts\"",
+    "test": "mocha \"test/**/*.test.ts\"",
     "version": "oclif-dev readme && git add README.md"
   },
   "types": "lib/index.d.ts",
